--- a/assets/css/Projects.css
+++ b/assets/css/Projects.css
@@ -13,8 +13,17 @@
     }
 
     .projImg {
-      size:inherit;
+      size: inherit;
     }
+
+    .card {
+      margin: 10px;
+    }
+
+    /* .btn-primary {
+      background-color: lightgreen;
+    } */
+    
     
     .footer {
       color: darkgray;
